--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerceapp",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://AhmedYasser-js.github.io/React-ecommerceApp",
+  "homepage": "https://AhmedYasser-js.github.io/untitled-folder",
   "type": "module",
   "scripts": {
     "dev": "vite",
